force-app/main/default/objects/Error_Logger__c/Error_Logger__c.object-meta.xml
<CustomObject>
    <description>This object will used to create error record of DML operation.(This will used in Flows and Triggers.)</description>
    <label>Error Logger</label>
    <nameField>
        <label>Error Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>