force-app/main/default/objects/Error_Logger__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>Object Name on which DML operation is happened

.</description>
    <label>Source Object</label>
    <length>70</length>
    <type>Text</type>
</CustomField>