force-app/main/default/objects/Error_Logger__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>Record id of that object on which error occurred.</description>
    <label>Source Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>