force-app/main/default/objects/Error_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Source_Record_Id__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>